<resources>
    <!--<string name="app_name">数字治理</string>-->
    <string name="app_exit">确定要退出该APP吗？</string>
    <string name="app_develop">正在开发中</string>
    <string name="text_yes">是</string>
    <string name="text_no">否</string>

    <string name="login_title">登录</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_phone_hint">手机号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_password_confirm_hint">确认密码</string>
    <string name="login_verification_hint">验证码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_text">登 录</string>
    <string name="confirm_text">确 认</string>
    <string name="login_username_empty">用户名不能为空</string>
    <string name="login_phone_empty">手机号不能为空</string>
    <string name="login_phone_not_right">手机号格式不正确</string>
    <string name="login_get_verification_fail">获取验证码失败</string>
    <string name="login_verification_empty">验证码不能为空</string>
    <string name="login_verification_not_right">验证码错误</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="confirm_password_empty">确认密码不能为空</string>
    <string name="password_not_Inconsistent">填写的密码不一致</string>
    <string name="change_password_fail">修改密码失败</string>
    <string name="login_fail">登录失败</string>
    <string name="login_phone">手机号登录</string>
    <string name="login_account">账号密码登录</string>
    <string name="login_get_verification">获取验证码</string>
    <string name="cancel_record">请结束上一个账号的巡查，再登录另一个账号</string>

    <string name="setting_start_fail">开始失败,请重新点击开始</string>
    <string name="setting_start_select">请选择巡查类型</string>
    <string name="setting_sign_text">上班打卡</string>

    <string name="turn_patrol_text">巡查</string>
    <string name="turn_record_text">轨迹</string>
    <string name="turn_field_text">范围</string>
    <string name="turn_fetch_text">定点巡查</string>
    <string name="turn_upload_text">事件</string>
    <string name="turn_setting_text">设置</string>
    <string name="turn_setting_web">三进三同</string>
    <string name="turn_setting_more">敬请期待</string>
    <string name="turn_id_empty">门牌不存在</string>

    <string name="detail_finish">结束巡查(打卡)</string>
    <string name="detail_sign">签到</string>
    <string name="detail_patrol_type">巡查类型：</string>
    <string name="detail_search_problem">发现问题：</string>
    <string name="detail_describe_problem">描述问题：</string>
    <string name="detail_describe_user">填写人：</string>
    <string name="detail_describe_time">填写日期：</string>
    <string name="detail_urgency">紧急程度：</string>
    <string name="detail_img_upload">图片上传：</string>
    <string name="detail_location">定位信息：</string>
    <string name="detail_commit">上报</string>
    <string name="detail_save">保存</string>
    <string name="detail_commit_success">上报成功</string>
    <string name="detail_commit_fail">上报失败</string>
    <string name="detail_save_success">保存成功</string>
    <string name="detail_save_fail">保存失败</string>
    <string name="detail_urgency_record">记录</string>
    <string name="detail_urgency_normal">正常</string>
    <string name="detail_urgency_suspicious">可疑</string>
    <string name="detail_urgency_urgent">紧急</string>
    <string name="detail_urgency_empty">请选择紧急程度</string>
    <string name="detail_describe_empty">请填写问题的描述</string>
    <string name="detail_question_empty">请选择问题</string>
    <string name="detail_finish_fail">结束巡查失败，请重新结束</string>
    <string name="detail_finish_success">结束巡查成功</string>
    <string name="detail_img_limit">最多只能选择9张图片</string>
    <string name="detail_patrol_username">户主姓名：</string>
    <string name="detail_patrol_number">人数：</string>
    <string name="detail_patrol_area_type">社区：</string>
    <string name="detail_patrol_inspection_point">网格巡查点：</string>
    <string name="detail_patrol_address">地址：</string>
    <string name="detail_patrol_party_data">党员信息：</string>
    <string name="detail_patrol_party_username">姓名：</string>
    <string name="detail_patrol_party_position">职务：</string>
    <string name="detail_patrol_party_commitment">承诺：</string>
    <string name="detail_patrol_party_phone">电话：</string>
    <string name="detail_patrol_party_time">入党时间：</string>
    <string name="detail_patrol_merchant_data">商户信息：</string>
    <string name="detail_patrol_merchant_user">责任人：</string>
    <string name="detail_patrol_merchant_type">商户类别：</string>
    <string name="detail_patrol_merchant_name">商户名称：</string>
    <string name="detail_patrol_merchant_time">营业时间：</string>
    <string name="detail_patrol_merchant_owner">检查责任人：</string>
    <string name="detail_patrol_merchant_photo">门店照片：</string>
    <string name="detail_house_type_a">行政村</string>
    <string name="detail_house_type_n">自然村</string>

    <string name="detail_patrol_address_2">巡查地点：</string>
    <string name="detail_patrol_username_2">户主名称：</string>
    <string name="detail_patrol_owner">责任人：</string>
    <string name="detail_patrol_time">营业时间：</string>
    <string name="detail_patrol_phone">联系电话：</string>
    <string name="detail_patrol_area">经营范围：</string>
    <string name="detail_patrol_leader">检查负责人：</string>

    <string name="event_patrol_username">巡查人员：</string>

    <string name="record_detail">查看详情</string>
    <string name="record_title_content">巡查记录</string>
    <string name="record_event_title">事件记录</string>
    <string name="record_event_emergency">紧急程度：%s</string>
    <string name="record_patrol_time">巡查时间：%s</string>
    <string name="record_patrol_duration">巡查时长：%s</string>
    <string name="record_patrol_type">巡查类型：%s</string>
    <string name="record_patrol_name">巡查人员：%s</string>

    <string name="photo_album">相册</string>
    <string name="take_photo">拍照</string>
    <string name="save_big_image">保存图片</string>
    <string name="cancel">取消</string>
    <string name="saved_fail">保存失败</string>
    <string name="save_image_success">保存成功</string>
    <string name="upload_image_fail">上传图片失败</string>

    <string name="report_handle_text">是否处理：</string>
    <string name="report_is_handle">已处理</string>
    <string name="report_is_report">已上报</string>
    <string name="report_not_handle">未处理</string>
    <string name="report_handle_hint">处理内容描述</string>
    <string name="report_commit">提交</string>
    <string name="record_time">巡查时长：%s</string>
    <string name="record_emergency">紧急程度：%s</string>
    <string name="record_emergency_empty">请选择紧急程度</string>

    <string name="handle_describe_problem">描述问题：</string>
    <string name="handle_describe_user">处理人：</string>
    <string name="handle_describe_time">处理时间：</string>
    <string name="handle_commit_fail">提交失败</string>
    <string name="handle_describe_empty">处理内容不可为空</string>
    <string name="handle_user_empty">处理人不可为空</string>
    <string name="handle_time_empty">处理时间不可为空</string>
    <string name="handle_img_url_empty">图片不可为空</string>
    <string name="handle_commit">处理</string>
    <string name="handle_commit2">上报</string>
    <string name="handle_commit3">委派</string>
    <string name="handle_send_report_hint">上报建议</string>
    <string name="handle_img_limit">最多只能选择4张图片</string>
    <string name="handle_trust_success">委派成功</string>
    <string name="handle_trust_fail">委派失败</string>
    <string name="handle_trust_hint">备注</string>

    <string name="field_search_button">搜索</string>
    <string name="field_search_address">地址：</string>
    <string name="field_search_name">用户名：</string>

    <!-- android 6.0权限-->
    <string name="permission_tip_camera">缺少(相机)权限，无法使用该功能，点击"设置"去开启此权限\n您可在“设置”>“应用”>“权限”中配置权限</string>
    <string name="permission_tip_audio">缺少(麦克风)权限，无法使用该功能，点击"设置"去开启此权限\n您可在“设置”>“应用”>“权限”中配置权限</string>
    <string name="permission_tip_video">缺少(麦克风或相机)权限，无法使用该功能，点击"设置"去开启此权限\n您可在“设置”>“应用”>“权限”中配置权限</string>
    <string name="permission_tip_location">缺少(读取位置信息)权限，无法使用该功能，点击"设置"去开启此权限\n您可在“设置”>“应用”>“权限”中配置权限</string>
    <string name="permission_tip_SD_IMEI">本App需要使用(存储)和(读取本机识别码)权限，您是否同意?点击"设置"去开启此权限\n您可在“设置”>“应用”>“权限”中配置权限</string>
    <string name="permission_tip_SD">本App需要使用(存储)权限，您是否同意?点击"设置"去开启此权限\n您可在“设置”>“应用”>“权限”中配置权限</string>
    <string name="settings">设置</string>

    <string name="short_link_empty">短链接不能为空</string>
    <string name="scan_success">扫描成功</string>
    <string name="scan_fail">扫描失败,请重新扫描</string>
    <string name="scan_not">不是本系统的短链接</string>
    <string name="not_id">不是巡查点</string>

    <string name="get_question_empty">获取问题列表失败，请重新加载</string>

    <string name="map_init_ing">定位功能正在启动中，请稍后再试</string>
    <string name="map_init_fail">定位功能未启动，请打开定位功能</string>

    <string name="report_share">台账链接已复制到剪切板</string>

    <string name="flash_text_1">以防为主  防控结合</string>
    <!--<string name="flash_text_2">建设平安、和谐水唇</string>-->
    <string name="flash_text_2_guangdong">建设平安、和谐广东</string>
    <string name="flash_text_2_china">建设平安、和谐中国</string>
    <string name="flash_text_2_hekou">建设平安、和谐河口</string>
    <string name="flash_text_3">进入系统</string>
    <!--<string name="flash_text_bottom">陆河县水唇镇人民政府</string>-->
    <string name="flash_text_bottom_hekou">河口人民政府</string>
    <string name="flash_text_bottom_guangdong">广东省人民政府</string>

    <string name="setting_change_password">重置密码</string>
    <string name="setting_version">检查更新</string>

</resources>
