<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/Detail_Title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/detail_patrol_address" />

        <TextView
            android:id="@+id/tv_patrol_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/Detail_Title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/detail_patrol_username" />

        <TextView
            android:id="@+id/tv_house_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/Detail_Title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/detail_patrol_time" />

        <TextView
            android:id="@+id/tv_patrol_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/Detail_Title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/detail_patrol_phone" />

        <TextView
            android:id="@+id/tv_house_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/Detail_Title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/detail_patrol_area" />

        <TextView
            android:id="@+id/tv_house_area"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/Detail_Title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/detail_patrol_owner" />

        <TextView
            android:id="@+id/tv_house_owner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            style="@style/Detail_Title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/detail_patrol_leader" />

        <TextView
            android:id="@+id/tv_house_leader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />

    </LinearLayout>


</LinearLayout>