<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FlashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_flash_1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_flash"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_flash_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/flash_text_1"
            android:textColor="@color/white"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/tv_flash_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/flash_text_2_guangdong"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_flash_3"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_white_round"
                android:gravity="center"
                android:text="@string/flash_text_3"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_flash_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="50dp"
                android:gravity="center_horizontal"
                android:text="@string/flash_text_bottom_guangdong"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>