<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHint"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_finish"
                style="@style/Detail_Toolbar_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_red"
                android:text="@string/detail_finish" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="时间" />

            <TextView
                android:id="@+id/tv_sign"
                style="@style/Detail_Toolbar_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_orange"
                android:text="@string/detail_sign" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/white">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Detail_Title_TextView"
                android:text="@string/detail_search_problem"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Detail_Title_TextView"
                android:text="@string/detail_describe_problem"/>

            <EditText
                android:layout_width="match_parent"
                android:background="@color/colorHint"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="12dp"
                android:gravity="start"
                android:layout_height="120dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Detail_Title_TextView"
                android:text="@string/detail_location"/>

            <TextView
                android:id="@+id/tv_location_describe"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:drawableRight="@mipmap/ic_launcher"
                android:textSize="12dp"
                android:gravity="center_vertical"
                android:layout_height="40dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>