<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHint"
        android:orientation="vertical">

        <include layout="@layout/item_title_bar" />

        <include
            android:id="@+id/ll_house_data_1"
            layout="@layout/item_house_data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                style="@style/Detail_Title_TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/event_patrol_username" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                style="@style/Detail_Title_TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/detail_patrol_type" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/iv_type"
                android:layout_width="24dp"
                android:layout_height="22dp"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="1dp"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="20dp">

            <TextView
                style="@style/Detail_Title_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_search_problem" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_problem"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/Detail_Title_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_describe_problem" />

            <TextView
                android:id="@+id/tv_describe"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                style="@style/Detail_Title_TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/detail_urgency" />

            <ImageView
                android:id="@+id/iv_urgency"
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_urgency"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp">

            <TextView
                style="@style/Detail_Title_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_img_upload" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                style="@style/Detail_Title_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_location" />

            <TextView
                android:id="@+id/tv_location_describe"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:drawableRight="@drawable/ic_loaction"
                android:gravity="center_vertical"
                android:textSize="12dp" />

            <com.baidu.mapapi.map.MapView
                android:id="@+id/detail_map_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>